@@ -44,9 +44,9 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :dictionary_file, 'CSV File', class: 'control-label' %>
+    <%= label :dictionary_file, 'CSV File', class: 'control-label' %>
     <div class="controls">
-      <%= f.file_field :dictionary_file %>
+      <%= file_field_tag :dictionary_file %>
     </div>
   </div>
 
