@@ -1,5 +1,8 @@
 == 0.12.1
 
+* Bug Fix
+  * Fixed a bug that prevented dictionary CSV files from being added to a dictionary
+
 == 0.12.0
 
 * Enhancements
